<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/gray_CECECE">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_light_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_ffffff"
        android:paddingStart="27dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="8"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/item_light_mode" />

    <LinearLayout
        android:id="@+id/ll_flash_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white_ffffff"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_light_mode">

        <TextView
            android:id="@+id/tv_light_freq_title"
            style="@style/TvLightControlTitle"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="20dp"
            android:text="@string/light_flash_freq"
            android:textColor="@color/black_242424"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/rg_light_flash"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="22dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_light_freq_title"
            app:layout_constraintTop_toTopOf="@id/tv_light_freq_title">

            <RadioButton
                android:id="@+id/rbtn_light_flash_quick"
                style="@style/RbtnLightFlash"
                android:layout_marginStart="0dp"
                android:background="@drawable/bg_light_flash_selector"
                android:checked="true"
                android:text="@string/light_flash_quick"
                android:textColor="@drawable/color_light_flash_selector" />

            <RadioButton
                android:id="@+id/rbtn_light_flash_slow"
                style="@style/RbtnLightFlash"
                android:background="@drawable/bg_light_flash_selector"
                android:text="@string/light_flash_slow"
                android:textColor="@drawable/color_light_flash_selector" />

            <RadioButton
                android:id="@+id/rbtn_light_flash_slower"
                style="@style/RbtnLightFlash"
                android:background="@drawable/bg_light_flash_selector"
                android:text="@string/light_flash_slower"
                android:textColor="@drawable/color_light_flash_selector" />

            <RadioButton
                android:id="@+id/rbtn_light_flash_music"
                style="@style/RbtnLightFlash"
                android:background="@drawable/bg_light_flash_selector"
                android:text="@string/light_flash_music"
                android:textColor="@drawable/color_light_flash_selector" />

        </RadioGroup>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>