<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dbg_dialog_shape">


    <TextView
        android:id="@+id/tv_mic_eq_title"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:gravity="center"
        android:text="@string/sound_card_eq_title"
        android:textColor="@color/black_242424"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/ibtn_mic_eq_close"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:scaleType="center"
        android:src="@drawable/ic_mic_eq_close"
        android:background="@drawable/bg_btn_sound_card_atmosphere_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_mic_eq_title_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_DEDEDE"
        app:layout_constraintTop_toBottomOf="@id/tv_mic_eq_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_mic_eq_parent"
        android:layout_width="0dp"
        android:layout_height="431dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_gain_12"
        app:layout_constraintTop_toBottomOf="@id/view_mic_eq_title_line"
        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/item_eq_seekbar"
        tools:spanCount="10" />


    <TextView
        android:id="@+id/tv_gain_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="34dp"
        android:gravity="end"
        android:text="@string/eq_freq_12db"
        android:textColor="@color/gray_8B8B8B"
        android:textSize="@dimen/text_10sp"
        app:layout_constraintBottom_toTopOf="@id/tv_gain_0"
        app:layout_constraintEnd_toStartOf="@id/rv_mic_eq_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rv_mic_eq_parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />


    <TextView
        android:id="@+id/tv_gain_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eq_freq_0db"
        android:textColor="@color/gray_8B8B8B"
        android:textSize="@dimen/text_10sp"
        app:layout_constraintBottom_toTopOf="@id/tv_gain_negative_12"
        app:layout_constraintEnd_toEndOf="@id/tv_gain_12"
        app:layout_constraintStart_toStartOf="@id/tv_gain_12"
        app:layout_constraintTop_toBottomOf="@id/tv_gain_12" />

    <TextView
        android:id="@+id/tv_gain_negative_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:text="@string/eq_freq_negative_12db"
        android:textColor="@color/gray_8B8B8B"
        android:textSize="@dimen/text_10sp"
        app:layout_constraintBottom_toBottomOf="@id/rv_mic_eq_parent"
        app:layout_constraintEnd_toEndOf="@id/tv_gain_12"
        app:layout_constraintStart_toStartOf="@id/tv_gain_12"
        app:layout_constraintTop_toBottomOf="@id/tv_gain_0" />


    <View
        android:id="@+id/view_mic_eq_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="28dp"
        android:background="@color/gray_DEDEDE"
        app:layout_constraintTop_toBottomOf="@id/rv_mic_eq_parent" />


    <Button
        android:id="@+id/btn_mic_eq_reset"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@drawable/bg_btn_sound_card_atmosphere_selector"
        android:text="@string/eq_reset"
        android:textColor="@color/black_464646"
        android:textSize="@dimen/text_15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_mic_eq_bottom_line"
        app:layout_constraintVertical_chainStyle="spread" />


</androidx.constraintlayout.widget.ConstraintLayout>