<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.light.LightContainerFragment">

    <RelativeLayout
        android:id="@+id/rl_light_top"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageButton
            android:id="@+id/ib_content_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/top_view_margin"
            android:background="@null"
            android:padding="@dimen/top_view_padding"
            android:src="@drawable/ic_back_black" />

        <TextView
            android:id="@+id/tv_content_title"
            style="@style/TextStyle_18sp_white_ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/multi_media_light_settings"
            android:textColor="@color/black_242424"
            android:textSize="@dimen/text_18sp"
            tools:text="本地" />

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/sw_light"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="14dp"
            app:kswBackDrawable="@drawable/bg_alarm_switch_btn_selector"
            app:kswThumbColor="@color/white_ffffff"
            app:kswThumbHeight="22dp"
            app:kswThumbRangeRatio="2" />


    </RelativeLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicator="@drawable/tab_indicator_device_music"
        app:tabIndicatorFullWidth="false"
        app:tabSelectedTextColor="@color/black_242424"
        app:tabTextColor="@color/gray_text_989898">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_coloured_lights" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_twinkle" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_scene" />
    </com.google.android.material.tabs.TabLayout>

    <com.jieli.btsmart.ui.widget.BlockClickEventLayout
        android:id="@+id/bl_viewpager2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp2_light"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_F8FAFC"
            android:overScrollMode="never"
            android:paddingTop="10dp" />
    </com.jieli.btsmart.ui.widget.BlockClickEventLayout>

</LinearLayout>